--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
 .App {
   text-align: center;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
+
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    height: 15%;
+    position: absolute;
+    width: 100%;
+  /* background-color: #00ca32; */
+  /* background-color: #25e9f7; */
+  /* min-height: 120px; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: blue;
+  text-align: center;
+  vertical-align:middle;
+
+    border: orange;
+    border-style: solid;
+}
+.Main-Content img {
+    height: 200px;
+    width: 200px;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.Main-Content {
+    /* background-color: #25e9f7; */
+    /* background-color: #55effa; */
+    position: absolute;
+    top: 16%;
+    left: 10%;
+    margin: 5% auto;
+    padding: 5px;
+    opacity: 80%;
+    width:80%;
+    border: blue;
+    border-style: solid;
+    color:white;
+    /* padding: 5%; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Main-Content #main-choices{
+    /* color:purple; */
+}
+
+.Calculator {
+    /* background-color: #25e9f7; */
+    /* background-color: #55effa; */
+    min-height: 30vh;
+    width: 80%;
+    border-style:ridge;
+    border-color: blue;
+    margin: 3% auto;
+    padding: 3%;
+    color: black;
+}
+
+
+.Calculator .btn{
+    /* color:blueviolet; */
+    margin-top: 15px;
+}
+
+
+
+
+
+
+
+.App-Footer {
+    height: 15%;
+
+    /* min-height: 15vh; */
+    /* max-height: 15vh; */
+    background-color: #003459;
+    text-align: center;
+    /* border-top: black; */
+    /* border-style: solid; */
+    /* vertical-align: bottom; */
+    border: black;
+    border-style: solid;
+    bottom:0px;   
+    min-height: max-content;
+    opacity: 75%;
+    position: absolute;
+    width: 100%;
+}
+
+.App-Footer footer{
+    opacity: 35%;
+
+    color: black;
+    font-weight: bold;
+    font-size:100%;
+    /* bottom: 50px; */
+    position: relative;
+    padding:10px;
 }
