--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
     left: 10%;
     margin: 5% auto;
     padding: 5px;
-    opacity: 80%;
+    opacity: 0.8;
     width:80%;
     border: blue;
     border-style: solid;
@@ -89,7 +89,7 @@
     /* vertical-align: bottom; */
     border: black;
     border-style: solid;
-    bottom:0px;   
+    bottom:0px;
     min-height: max-content;
     opacity: 75%;
     position: absolute;
